# pzkl

./: CMakeLists.txt  README.md  main.cc  messages.proto  mystem.cc  mystem.h  util.cc  util.h
json11/: Makefile
py/: config.py  mystem.py  run.py  templates.py
texts/: input.txt  inter.json  output.asciipb  testset.txt  text.asciipb  tokens.asciipb
